<resources>
    <string name="app_name">FavouritePlaces</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="continueWithoutLogin">Continue without login</string>
    <string name="errorLogIn">User or password incorrect, please try again</string>
    <string name="errorSignUp">Unable to create user, please try again</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="image">Image</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="category">Category</string>
    <string name="sharePublic">Public</string>
    <string name="sharePrivate">Private</string>
    <string name="author">Author</string>
    <string name="mustBeSignedIn">You must be signed in to add favourites</string>
    <string name="saveFavourite">Save as favourite</string>
    <string name="editFavourite">Edit favourite</string>
    <string name="deleteFavourite">Delete favourite</string>

    <string name="warning">Warning</string>
    <string name="deleteDesc">Do you really want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>