<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etcAccountName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etvAccountLocation"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/etcAccountName"
            app:layout_constraintStart_toStartOf="@+id/etcAccountName"
            app:layout_constraintTop_toBottomOf="@+id/etcAccountName" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="98dp"
            android:layout_height="93dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/baseline_account_box_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etvAccountLocation" />

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etvAccountLocation"
            app:layout_constraintStart_toStartOf="@+id/etvAccountLocation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>