<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFavouriteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">


            <EditText
                android:id="@+id/etvAddTitle"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imAddImage" />

            <EditText
                android:id="@+id/etvAddDesc"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text|textAutoCorrect"
                app:layout_constraintEnd_toEndOf="@+id/etvAddTitle"
                app:layout_constraintStart_toStartOf="@+id/etvAddTitle"
                app:layout_constraintTop_toBottomOf="@+id/etvAddTitle" />

            <ImageButton
                android:id="@+id/imbAddLocation"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_add_location_24"
                app:layout_constraintStart_toStartOf="@+id/etvAddDesc"
                app:layout_constraintTop_toBottomOf="@+id/spCategory" />


            <Button
                android:id="@+id/btnAddSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tbSharePlace" />

            <ImageView
                android:id="@+id/imAddImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/baseline_camera_alt_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAddTakeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:src="@drawable/baseline_camera_alt_24"
                app:layout_constraintBottom_toBottomOf="@+id/imAddImage"
                app:layout_constraintEnd_toEndOf="@+id/imAddImage" />

            <RatingBar
                android:id="@+id/rbStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imbAddLocation" />

            <EditText
                android:id="@+id/etvReview"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/review"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/rbStars"
                app:layout_constraintStart_toStartOf="@+id/rbStars"
                app:layout_constraintTop_toBottomOf="@+id/rbStars" />

            <Spinner
                android:id="@+id/spCategory"
                android:layout_width="200dp"
                android:layout_height="48dp"
                app:layout_constraintEnd_toEndOf="@+id/etvAddDesc"
                app:layout_constraintStart_toStartOf="@+id/etvAddDesc"
                app:layout_constraintTop_toBottomOf="@+id/etvAddDesc" />

            <ToggleButton
                android:id="@+id/tbSharePlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                app:layout_constraintEnd_toEndOf="@+id/etvReview"
                app:layout_constraintStart_toStartOf="@+id/etvReview"
                app:layout_constraintTop_toBottomOf="@+id/etvReview" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAddSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:clickable="true"
                android:src="@drawable/baseline_image_24"
                app:layout_constraintBottom_toBottomOf="@+id/fabAddTakeImage"
                app:layout_constraintEnd_toStartOf="@+id/fabAddTakeImage" />

            <TextView
                android:id="@+id/tvAddLatLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/imbAddLocation"
                app:layout_constraintStart_toEndOf="@+id/imbAddLocation"
                app:layout_constraintTop_toTopOf="@+id/imbAddLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>